<resources>
    <string name="app_name">Breathe</string>
    <string name="add_session">Add a new session</string>
    <string name="inhale_duration">Inhale Duration</string>
    <string name="exhale_duration">Exhale Duration</string>
    <string name="repetitions">Repetitions</string>
    <string name="create_session">Create Session</string>
    <string name="breath_session">Breath Session</string>
    <string name="cancel">Cancel</string>
    <string name="second">s</string>
    <string name="breathe_in">Breathe In</string>
    <string name="breathe_out">Breathe Out</string>
    <string name="direction_in">In</string>
    <string name="direction_out">Out</string>
    <string name="times">Times</string>
    <string name="durations_and_repetitions_cannot_be_0">Durations and repetitions cannot be 0</string>
    <string name="done">Done</string>
    <plurals name="number_of_repetitions">
        <item quantity="one">%d Rep</item>
        <item quantity="other">%d Reps</item>
    </plurals>
</resources>