<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/add_session_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/create_session"
        />

    <TextView
        android:id="@+id/inhale_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/inhale_duration"
        app:layout_constraintTop_toBottomOf="@id/add_session_toolbar"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/inhale_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/inhale_text"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/exhale_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exhale_duration"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/inhale_duration"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/exhale_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/exhale_text"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/repetition_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repetitions"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/exhale_duration"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/repetitions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/repetition_text"
        app:layout_constraintStart_toStartOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>